--- a/lesson2_1.ipynb
+++ b/lesson2_1.ipynb
@@ -39,6 +39,23 @@
     "total = n + m\n",
     "total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Python\")"
+   ]
   }
  ],
  "metadata": {
